[workspace]
members = ["compiler"]

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["INFINI Labs <hello@infini.ltd>"]
license = "AGPL-3.0+"

[package]
name = "loadgen-dsl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
loadgen-dsl-compiler = { path = "compiler" }
serde = "1.0"
serde_yaml = "0.9"
wee_alloc = "0.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
